# KaliIntelligenceSuite

./: .bashrc  .dockerignore  .gitignore  .vimrc  Dockerfile  INSTALL.md  KISCOLLECT.md  KISMANAGE.md  KISREPORT.md  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-image.yml
design/: ciphersuites.xlsx  collectors.ods  data-collection-model.graphml  eer-diagram.mwb  load_cipher_suites.py  scopes.graphml  sync_collector_info.py  update_tld.py
kis/: kiscollect.py  kiscustom.py  kismanage.py  kisreport.py  kistest.sh
kis/collectors/: core.py  nmapcore.py
kis/collectors/apis/: builtwith.py  burpsuite.py  censys.py  certspotter.py  core.py  crtsh.py  dnsdumpster.py  haveibeenpwned.py  hostio.py  hunter.py  securitytrails.py  shodan.py  viewdns.py  virustotal.py
kis/collectors/filesystem/: core.py  masscan.py  nessus.py  nmap.py
kis/collectors/os/: collector.py  core.py
kis/configs/: api.config  ciphersuites.json  collectors.config  config.py  database.config  domain.config  scanner.config  top-level-domains.json
kis/database/: __init__.py  config.py  model.py  report.py  utils.py
kis/database/manage/: company.py  core.py  database.py  domain.py  email.py  host.py  hostname.py  kiscollect.py  network.py  scan.py  service.py  url.py  workspace.py
kis/database/patches/: v0.3.0.sql  v0.4.0.sql
kis/database/report/: additionalinfo.py  breach.py  cert.py  cname.py  command.py  company.py  core.py  credential.py  dnsrecord.py  domain.py  email.py  file.py  host.py  hostname.py  leaves.py  path.py  (+5 more)
kis/view/: console.py  core.py  curses.py
unittests/tests/: core.py  test_collector_core.py  test_command_creation.py  test_command_injections.py  test_data_model.py  test_database_cascades.py  test_kiscollect.py  test_kismanage.py  test_report.py  test_scoping.py
(+258 files in other folders)
