[tool.poetry]
name = "kaliintelsuite"
version = "0.1.0"
description = "Kali Intelligence Suite (KIS) shall aid in the fast, autonomous, central, and comprehensive collection of intelligence by executing standard penetration testing tools. The collected data is internally stored in a structured manner to allow the fast identification and visualisation of the collected information."
authors = ["Lukas Reiter <chopicalqui@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
configparser = "^5.1.0"
psycopg2-binary = "^2.9.2"
shodan = "^1.25.0"
censys = "^2.1.8"
cryptography = "^36.0.0"
passgen = "^1.1.1"
openpyxl = "^3.0.9"
psutil = "^5.8.0"
pytest = "7.0"
pysqlcipher3 = "^1.0.4"
pandas = "^1.3.4"
bs4 = "^0.0.1"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
